# MyInvincibleLibrary-MetaDataDB

./: .gitignore  CMakeLists.txt  DBController.cpp  DBController.h  DataBase.cpp  DataBase.h  README.md  SQLController.cpp  SQLController.h  User.cpp  User.h  huffman_helper.cpp  huffman_helper.h  main.cpp
data_structures/: DBList.cpp  DBList.h  DBNode.cpp  DBNode.h  Galery.cpp  Galery.h  GaleryNode.cpp  GaleryNode.h  imagen.cpp  imagen.h
metadata/: metadata.json  metadata_backup.json  tests.json
